--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "NzIzMTM2OTQ3MTE1MjYyMDAz.XutmzA.-4OOdsA5dIqlACjTwYomozcKwaE"
+    "token": "NzIzMTM2OTQ3MTE1MjYyMDAz.XutPww.EmPqQgIffi5frcbjtOSd7dFfAoE"
 }
